infra_/argorollouts.yaml
apiVersion: v1
kind: Service
metadata:
  name: chip
  namespace: chip
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: chip
    app.kubernetes.io/instance: chip
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
  selector:
    app: chip
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chip
  namespace: chip
spec:
  host: chip
  subsets:
    - name: v1
      labels:
        version: v1
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chip-gateway
  namespace: chip
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "chip"
        - "chip.k8s.raj.ninja"
        - "chip.chip.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chip-gateway
  namespace: chip
spec:
  hosts:
    - "chip.chip.svc.cluster.local"
    - "chip.k8s.raj.ninja"
    - "chip"
  gateways:
    - chip-gateway
  http:
    - route:
        - destination:
            host: chip
            port:
              number: 8080
      retries:
        attempts: 0
        perTryTimeout: 500ms
        retryOn: refused-stream
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: chip
  namespace: chip
spec:
  replicas: 10
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 10 }
        - setWeight: 40
        - pause: { duration: 10 }
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }
        - setWeight: 100
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: chip
  template:
    metadata:
      annotations:
        istio-injection: enabled
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: chip
        name: chip
        version: v1
    spec:
      containers:
        - name: sre-observability
          image: rafacamppos/sre-app
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 60
