infra_/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-demo-stable
  namespace: argo-rollouts
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rollouts-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
                name: rollouts-demo-stable
                port:
                  number: 80
